[NAE-2027] Netgrif modules
- updated use of auth methods